--- a/checklist.html
+++ b/checklist.html
@@ -35,6 +35,7 @@
     backdrop-filter: blur(6px);
     position: relative;
     overflow: hidden;
+    animation: flicker 2.8s ease-in-out infinite;
   }
 
   /* Subtle ember overlay */
@@ -55,8 +56,9 @@
   .header{
     position: relative;
     display:flex;
-    align-items:center;
+    align-items:flex-start;
     justify-content:space-between;
+    gap: 12px;
     margin-bottom: 10px;
   }
 
@@ -73,7 +75,7 @@
 
   .badge{
     font-size: 12px;
-    font-weight: 700;
+    font-weight: 800;
     color: rgba(0,0,0,0.85);
     background: linear-gradient(90deg, var(--orange), var(--orange2));
     padding: 6px 10px;
@@ -86,13 +88,59 @@
     margin-top: 2px;
     font-size: 13px;
     color: var(--muted);
+    max-width: 520px;
   }
 
   .divider{
     position: relative;
     height: 1px;
-    margin: 12px 0 12px 0;
+    margin: 12px 0 10px 0;
     background: linear-gradient(90deg, transparent, rgba(255,122,24,0.55), transparent);
+  }
+
+  /* Progress */
+  .progressRow{
+    position: relative;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    gap: 12px;
+    margin: 8px 0 12px 0;
+  }
+
+  .progressLabel{
+    font-size: 12px;
+    color: rgba(255,255,255,0.70);
+    letter-spacing: 0.3px;
+    white-space: nowrap;
+  }
+
+  .progressBar{
+    flex: 1;
+    height: 10px;
+    border-radius: 999px;
+    background: rgba(0,0,0,0.28);
+    border: 1px solid rgba(255,122,24,0.18);
+    overflow:hidden;
+    box-shadow: inset 0 0 12px rgba(0,0,0,0.28);
+  }
+
+  .progressFill{
+    height: 100%;
+    width: 0%;
+    border-radius: 999px;
+    background: linear-gradient(90deg, var(--orange), var(--orange2));
+    box-shadow: 0 0 18px rgba(255,122,24,0.25);
+    transition: width 220ms ease;
+  }
+
+  .progressPct{
+    font-size: 12px;
+    font-weight: 800;
+    color: rgba(255,255,255,0.78);
+    min-width: 48px;
+    text-align: right;
+    white-space: nowrap;
   }
 
   /* Tasks */
@@ -110,7 +158,39 @@
     box-shadow: inset 0 0 12px rgba(0,0,0,0.25);
     font-size: 20px;
     line-height: 1.2;
+
+    cursor: pointer;
+    user-select: none;
+    position: relative;
+    overflow: hidden;
+
+    transition: transform 140ms ease, box-shadow 140ms ease, border-color 140ms ease, background 140ms ease;
   }
+
+  .task:hover{
+    transform: translateY(-2px);
+    border-color: rgba(255,122,24,0.22);
+    box-shadow:
+      inset 0 0 12px rgba(0,0,0,0.22),
+      0 0 18px rgba(255,122,24,0.10);
+  }
+  .task:active{ transform: translateY(0px) scale(0.995); }
+
+  /* shine sweep */
+  .task::after{
+    content:"";
+    position:absolute;
+    top:-30%;
+    left:-70%;
+    width: 45%;
+    height: 170%;
+    background: linear-gradient(90deg, transparent, rgba(255,255,255,0.10), transparent);
+    transform: rotate(18deg);
+    opacity: 0;
+    transition: left 260ms ease, opacity 260ms ease;
+    pointer-events:none;
+  }
+  .task:hover::after{ left: 130%; opacity: 1; }
 
   .box{
     width: 30px;
@@ -119,18 +199,11 @@
     color: rgba(255,255,255,0.9);
     text-shadow: 0 0 10px rgba(255,122,24,0.20);
     flex: 0 0 30px;
+
+    transform: translateZ(0);
   }
 
-  .label{
-    flex: 1;
-  }
-
-  .hint{
-    font-size: 12px;
-    color: rgba(255,255,255,0.55);
-    margin-left: 40px;
-    margin-top: 6px;
-  }
+  .label{ flex: 1; }
 
   /* Completed state */
   .completed{
@@ -153,17 +226,54 @@
     text-decoration-color: rgba(255,122,24,0.45);
   }
 
+  /* Checkbox pop animation */
+  @keyframes pop{
+    0% { transform: scale(1); }
+    35% { transform: scale(1.35); }
+    100% { transform: scale(1); }
+  }
+  .pop .box{ animation: pop 220ms ease; }
+
+  /* subtle pulse on task when completed */
+  @keyframes donePulse{
+    0% { box-shadow: inset 0 0 14px rgba(52,255,154,0.08), 0 0 0 rgba(52,255,154,0.0); }
+    50% { box-shadow: inset 0 0 18px rgba(52,255,154,0.12), 0 0 22px rgba(52,255,154,0.10); }
+    100% { box-shadow: inset 0 0 14px rgba(52,255,154,0.08), 0 0 0 rgba(52,255,154,0.0); }
+  }
+  .pulse{ animation: donePulse 420ms ease; }
+
+  /* Particle layer */
+  .particles{
+    position: absolute;
+    inset: 0;
+    pointer-events: none;
+    overflow: hidden;
+    z-index: 5;
+  }
+
+  .particle{
+    position:absolute;
+    width: 6px;
+    height: 6px;
+    border-radius: 999px;
+    background: rgba(255,176,0,0.95);
+    box-shadow: 0 0 14px rgba(255,122,24,0.35);
+    opacity: 0.95;
+    transform: translate3d(0,0,0);
+  }
+
   /* Optional: a tiny “ember flicker” animation on the panel glow */
   @keyframes flicker{
     0%, 100% { box-shadow: 0 0 24px rgba(255,122,24,0.18), 0 0 60px rgba(255,122,24,0.10), inset 0 0 18px rgba(255,122,24,0.06); }
     50% { box-shadow: 0 0 30px rgba(255,122,24,0.22), 0 0 70px rgba(255,122,24,0.12), inset 0 0 20px rgba(255,122,24,0.08); }
   }
-  .panel{ animation: flicker 2.8s ease-in-out infinite; }
 </style>
 </head>
 
 <body>
-  <div class="panel">
+  <div class="panel" id="panel">
+    <div class="particles" id="particles"></div>
+
     <div class="header">
       <div>
         <div class="title">🔥 Quest Checklist <span class="badge">ODDMEISTER</span></div>
@@ -173,58 +283,156 @@
 
     <div class="divider"></div>
 
+    <div class="progressRow">
+      <div class="progressLabel" id="progressText">Progress</div>
+      <div class="progressBar"><div class="progressFill" id="progressFill"></div></div>
+      <div class="progressPct" id="progressPct">0%</div>
+    </div>
+
     <div class="tasks">
-      <div id="task1" class="task" onclick="toggleTask('task1')">
+      <div id="task1" class="task" onclick="toggleTask('task1', event)">
         <div class="box">☐</div>
         <div class="label">Reach Level 40</div>
       </div>
 
-      <div id="task2" class="task" onclick="toggleTask('task2')">
+      <div id="task2" class="task" onclick="toggleTask('task2', event)">
         <div class="box">☐</div>
         <div class="label">Godfrey Icon</div>
       </div>
 
-      <div id="task3" class="task" onclick="toggleTask('task3')">
+      <div id="task3" class="task" onclick="toggleTask('task3', event)">
         <div class="box">☐</div>
         <div class="label">Upgrade Flask</div>
       </div>
 
-      <div id="task4" class="task" onclick="toggleTask('task4')">
+      <div id="task4" class="task" onclick="toggleTask('task4', event)">
         <div class="box">☐</div>
         <div class="label">Moonveil Katana</div>
       </div>
-
     </div>
   </div>
 
-
 <script>
-  function toggleTask(id) {
+  const TASK_IDS = ["task1","task2","task3","task4"];
+
+  function setTaskState(id, done) {
+    const el = document.getElementById(id);
+    if (!el) return;
+    const box = el.querySelector(".box");
+
+    el.classList.toggle("completed", done);
+    if (box) box.textContent = done ? "☑" : "☐";
+
+    localStorage.setItem("checklist_" + id, done ? "1" : "0");
+  }
+
+  function restoreFromStorage() {
+    for (const id of TASK_IDS) {
+      const done = localStorage.getItem("checklist_" + id) === "1";
+      setTaskState(id, done);
+    }
+    updateProgress();
+  }
+
+  function updateProgress() {
+    const doneCount = TASK_IDS.filter(id => localStorage.getItem("checklist_" + id) === "1").length;
+    const pct = Math.round((doneCount / TASK_IDS.length) * 100);
+
+    const fill = document.getElementById("progressFill");
+    const pctEl = document.getElementById("progressPct");
+    const text = document.getElementById("progressText");
+
+    if (fill) fill.style.width = pct + "%";
+    if (pctEl) pctEl.textContent = pct + "%";
+    if (text) text.textContent = `Progress: ${doneCount}/${TASK_IDS.length}`;
+  }
+
+  function addTempClass(el, className, ms) {
+    el.classList.add(className);
+    setTimeout(() => el.classList.remove(className), ms);
+  }
+
+  // Particle burst at click position (relative to panel)
+  function burstParticles(clientX, clientY, intensity = 10) {
+    const panel = document.getElementById("panel");
+    const layer = document.getElementById("particles");
+    if (!panel || !layer) return;
+
+    const rect = panel.getBoundingClientRect();
+    const x = clientX - rect.left;
+    const y = clientY - rect.top;
+
+    const count = intensity;
+    for (let i = 0; i < count; i++) {
+      const p = document.createElement("div");
+      p.className = "particle";
+      layer.appendChild(p);
+
+      // random direction + speed
+      const angle = Math.random() * Math.PI * 2;
+      const speed = 40 + Math.random() * 80;
+      const dx = Math.cos(angle) * speed;
+      const dy = Math.sin(angle) * speed;
+
+      // random size
+      const size = 4 + Math.random() * 4;
+      p.style.width = size + "px";
+      p.style.height = size + "px";
+
+      // place
+      p.style.left = (x - size/2) + "px";
+      p.style.top = (y - size/2) + "px";
+
+      // animate
+      const duration = 420 + Math.random() * 260;
+      p.animate([
+        { transform: `translate3d(0,0,0) scale(1)`, opacity: 0.95 },
+        { transform: `translate3d(${dx}px,${dy}px,0) scale(0.6)`, opacity: 0.0 }
+      ], { duration, easing: "cubic-bezier(.2,.8,.2,1)", fill: "forwards" });
+
+      // cleanup
+      setTimeout(() => p.remove(), duration + 30);
+    }
+  }
+
+  function toggleTask(id, evt) {
     const el = document.getElementById(id);
     if (!el) return;
 
-    const box = el.querySelector(".box");
     const isDone = el.classList.contains("completed");
+    const nextDone = !isDone;
 
-    if (isDone) {
-      el.classList.remove("completed");
-      if (box) box.textContent = "☐";
-    } else {
-      el.classList.add("completed");
-      if (box) box.textContent = "☑";
+    // Visual: checkbox pop every click
+    addTempClass(el, "pop", 230);
+
+    // If completing: pulse + spark burst
+    if (nextDone) {
+      addTempClass(el, "pulse", 420);
+      if (evt && evt.clientX != null) burstParticles(evt.clientX, evt.clientY, 12);
     }
 
-localStorage.setItem("checklist_" + id, el.classList.contains("completed") ? "1" : "0");
-
+    setTaskState(id, nextDone);
+    updateProgress();
   }
 
-  // Stream Deck triggers: open file with hash (#task1) to toggle once.
   window.onload = function() {
+    restoreFromStorage();
+
+    // If opened with #task1 etc, toggle once, then clear hash so it doesn't re-toggle on refresh
     if (window.location.hash) {
       const id = window.location.hash.substring(1);
-      toggleTask(id);
+      if (TASK_IDS.includes(id)) {
+        // fake event center-ish if no click event exists
+        const panel = document.getElementById("panel");
+        if (panel) {
+          const r = panel.getBoundingClientRect();
+          burstParticles(r.left + r.width*0.35, r.top + r.height*0.45, 10);
+        }
+        toggleTask(id, null);
+      }
+      history.replaceState(null, "", window.location.pathname + window.location.search);
     }
-  }
+  };
 </script>
 </body>
 </html>
