--- a/checklist.html
+++ b/checklist.html
@@ -116,6 +116,7 @@
   }
 
   .progressBar{
+    position: relative;
     flex: 1;
     height: 10px;
     border-radius: 999px;
@@ -132,6 +133,44 @@
     background: linear-gradient(90deg, var(--orange), var(--orange2));
     box-shadow: 0 0 18px rgba(255,122,24,0.25);
     transition: width 220ms ease;
+  }
+
+  /* victory sweep overlay (only visible at 100%) */
+  .progressBar::after{
+    content:"";
+    position:absolute;
+    top:-60%;
+    left:-50%;
+    width: 38%;
+    height: 220%;
+    background: linear-gradient(90deg, transparent, rgba(255,255,255,0.18), transparent);
+    transform: rotate(18deg);
+    opacity: 0;
+    pointer-events:none;
+  }
+
+  @keyframes victorySweep{
+    0%   { left: -60%; opacity: 0.0; }
+    10%  { opacity: 1.0; }
+    100% { left: 140%; opacity: 0.0; }
+  }
+
+  @keyframes victoryPulse{
+    0%, 100% { box-shadow: inset 0 0 12px rgba(0,0,0,0.28); }
+    50% { box-shadow: inset 0 0 12px rgba(0,0,0,0.28), 0 0 24px rgba(52,255,154,0.18), 0 0 48px rgba(255,122,24,0.16); }
+  }
+
+  .victory .progressBar{
+    animation: victoryPulse 900ms ease-in-out infinite;
+    border-color: rgba(52,255,154,0.30);
+  }
+  .victory .progressBar::after{
+    animation: victorySweep 900ms ease-in-out infinite;
+    opacity: 1;
+  }
+  .victory .progressFill{
+    box-shadow: 0 0 18px rgba(52,255,154,0.20), 0 0 34px rgba(255,122,24,0.18);
+    background: linear-gradient(90deg, var(--orange), var(--ok), var(--orange2));
   }
 
   .progressPct{
@@ -199,7 +238,6 @@
     color: rgba(255,255,255,0.9);
     text-shadow: 0 0 10px rgba(255,122,24,0.20);
     flex: 0 0 30px;
-
     transform: translateZ(0);
   }
 
@@ -283,29 +321,35 @@
 
     <div class="divider"></div>
 
-    <div class="progressRow">
+    <div class="progressRow" id="progressRow">
       <div class="progressLabel" id="progressText">Progress</div>
-      <div class="progressBar"><div class="progressFill" id="progressFill"></div></div>
+      <div class="progressBar" id="progressBar"><div class="progressFill" id="progressFill"></div></div>
       <div class="progressPct" id="progressPct">0%</div>
     </div>
 
-    <div class="tasks">
-      <div id="task1" class="task" onclick="toggleTask('task1', event)">
+    <div class="tasks" id="tasks">
+      <!-- keep your tasks as-is; IDs can change; script will auto-detect -->
+      <div id="task1" class="task" onclick="toggleTask(this)">
         <div class="box">☐</div>
         <div class="label">Reach Level 40</div>
       </div>
 
-      <div id="task2" class="task" onclick="toggleTask('task2', event)">
+            <div id="task1" class="task" onclick="toggleTask(this)">
+        <div class="box">☐</div>
+        <div class="label">Reach Level 40</div>
+      </div>
+
+      <div id="task2" class="task" onclick="toggleTask(this)">
         <div class="box">☐</div>
         <div class="label">Godfrey Icon</div>
       </div>
 
-      <div id="task3" class="task" onclick="toggleTask('task3', event)">
+      <div id="task3" class="task" onclick="toggleTask(this)">
         <div class="box">☐</div>
         <div class="label">Upgrade Flask</div>
       </div>
 
-      <div id="task4" class="task" onclick="toggleTask('task4', event)">
+      <div id="task4" class="task" onclick="toggleTask(this)">
         <div class="box">☐</div>
         <div class="label">Moonveil Katana</div>
       </div>
@@ -313,30 +357,36 @@
   </div>
 
 <script>
-  const TASK_IDS = ["task1","task2","task3","task4"];
+  function getTasks() {
+    return Array.from(document.querySelectorAll(".task"));
+  }
 
-  function setTaskState(id, done) {
-    const el = document.getElementById(id);
-    if (!el) return;
+  function taskKey(el) {
+    // Uses element id if present, otherwise stable-ish fallback
+    return el.id ? `checklist_${el.id}` : `checklist_auto_${getTasks().indexOf(el)}`;
+  }
+
+  function setTaskState(el, done) {
     const box = el.querySelector(".box");
-
     el.classList.toggle("completed", done);
     if (box) box.textContent = done ? "☑" : "☐";
-
-    localStorage.setItem("checklist_" + id, done ? "1" : "0");
+    localStorage.setItem(taskKey(el), done ? "1" : "0");
   }
 
   function restoreFromStorage() {
-    for (const id of TASK_IDS) {
-      const done = localStorage.getItem("checklist_" + id) === "1";
-      setTaskState(id, done);
-    }
-    updateProgress();
+    const tasks = getTasks();
+    tasks.forEach(el => {
+      const done = localStorage.getItem(taskKey(el)) === "1";
+      setTaskState(el, done);
+    });
+    updateProgress(true);
   }
 
-  function updateProgress() {
-    const doneCount = TASK_IDS.filter(id => localStorage.getItem("checklist_" + id) === "1").length;
-    const pct = Math.round((doneCount / TASK_IDS.length) * 100);
+  function updateProgress(initial=false) {
+    const tasks = getTasks();
+    const doneCount = tasks.filter(el => el.classList.contains("completed")).length;
+    const total = tasks.length || 1;
+    const pct = Math.round((doneCount / total) * 100);
 
     const fill = document.getElementById("progressFill");
     const pctEl = document.getElementById("progressPct");
@@ -344,7 +394,29 @@
 
     if (fill) fill.style.width = pct + "%";
     if (pctEl) pctEl.textContent = pct + "%";
-    if (text) text.textContent = `Progress: ${doneCount}/${TASK_IDS.length}`;
+    if (text) text.textContent = `Progress: ${doneCount}/${tasks.length}`;
+
+    // 100% celebration
+    const panel = document.getElementById("panel");
+    const victory = pct === 100 && tasks.length > 0;
+    if (panel) panel.classList.toggle("victory", victory);
+
+    // fire a celebratory burst only on the transition to 100%
+    if (!initial) maybeVictoryBurst(pct);
+  }
+
+  let lastPct = null;
+  function maybeVictoryBurst(pct) {
+    if (lastPct === null) { lastPct = pct; return; }
+    if (pct === 100 && lastPct !== 100) {
+      // burst from the progress bar center
+      const bar = document.getElementById("progressBar");
+      if (bar) {
+        const r = bar.getBoundingClientRect();
+        burstParticlesAt(r.left + r.width/2, r.top + r.height/2, 26);
+      }
+    }
+    lastPct = pct;
   }
 
   function addTempClass(el, className, ms) {
@@ -352,8 +424,33 @@
     setTimeout(() => el.classList.remove(className), ms);
   }
 
-  // Particle burst at click position (relative to panel)
-  function burstParticles(clientX, clientY, intensity = 10) {
+  // Burst particles around the CHECKBOX area (not mouse)
+  function burstAroundCheckbox(taskEl, intensity = 12) {
+    const panel = document.getElementById("panel");
+    const layer = document.getElementById("particles");
+    const boxEl = taskEl.querySelector(".box");
+    if (!panel || !layer || !boxEl) return;
+
+    const panelRect = panel.getBoundingClientRect();
+    const boxRect = boxEl.getBoundingClientRect();
+
+    // Center of the checkbox, in panel coords
+    const cx = (boxRect.left + boxRect.width/2) - panelRect.left;
+    const cy = (boxRect.top + boxRect.height/2) - panelRect.top;
+
+    // Ring-ish spawn around it
+    const radius = Math.max(12, Math.min(22, boxRect.width * 0.8));
+    for (let i = 0; i < intensity; i++) {
+      const angle = (i / intensity) * Math.PI * 2 + (Math.random() * 0.25);
+      const spawnX = cx + Math.cos(angle) * radius;
+      const spawnY = cy + Math.sin(angle) * radius;
+
+      spawnParticle(layer, spawnX, spawnY, angle);
+    }
+  }
+
+  // generic burst at screen coords (used for 100% celebration)
+  function burstParticlesAt(clientX, clientY, intensity = 18) {
     const panel = document.getElementById("panel");
     const layer = document.getElementById("particles");
     if (!panel || !layer) return;
@@ -362,74 +459,60 @@
     const x = clientX - rect.left;
     const y = clientY - rect.top;
 
-    const count = intensity;
-    for (let i = 0; i < count; i++) {
-      const p = document.createElement("div");
-      p.className = "particle";
-      layer.appendChild(p);
-
-      // random direction + speed
+    for (let i = 0; i < intensity; i++) {
       const angle = Math.random() * Math.PI * 2;
-      const speed = 40 + Math.random() * 80;
-      const dx = Math.cos(angle) * speed;
-      const dy = Math.sin(angle) * speed;
-
-      // random size
-      const size = 4 + Math.random() * 4;
-      p.style.width = size + "px";
-      p.style.height = size + "px";
-
-      // place
-      p.style.left = (x - size/2) + "px";
-      p.style.top = (y - size/2) + "px";
-
-      // animate
-      const duration = 420 + Math.random() * 260;
-      p.animate([
-        { transform: `translate3d(0,0,0) scale(1)`, opacity: 0.95 },
-        { transform: `translate3d(${dx}px,${dy}px,0) scale(0.6)`, opacity: 0.0 }
-      ], { duration, easing: "cubic-bezier(.2,.8,.2,1)", fill: "forwards" });
-
-      // cleanup
-      setTimeout(() => p.remove(), duration + 30);
+      spawnParticle(layer, x, y, angle, true);
     }
   }
 
-  function toggleTask(id, evt) {
-    const el = document.getElementById(id);
-    if (!el) return;
+  function spawnParticle(layer, x, y, angle, randomize=false) {
+    const p = document.createElement("div");
+    p.className = "particle";
+    layer.appendChild(p);
 
-    const isDone = el.classList.contains("completed");
+    const speed = (randomize ? 50 : 38) + Math.random() * (randomize ? 110 : 70);
+    const dx = Math.cos(angle) * speed;
+    const dy = Math.sin(angle) * speed;
+
+    const size = 3.5 + Math.random() * 4.5;
+    p.style.width = size + "px";
+    p.style.height = size + "px";
+    p.style.left = (x - size/2) + "px";
+    p.style.top  = (y - size/2) + "px";
+
+    const duration = 420 + Math.random() * 280;
+    p.animate([
+      { transform: `translate3d(0,0,0) scale(1)`, opacity: 0.95 },
+      { transform: `translate3d(${dx}px,${dy}px,0) scale(0.55)`, opacity: 0.0 }
+    ], { duration, easing: "cubic-bezier(.2,.8,.2,1)", fill: "forwards" });
+
+    setTimeout(() => p.remove(), duration + 40);
+  }
+
+  function toggleTask(taskEl) {
+    const isDone = taskEl.classList.contains("completed");
     const nextDone = !isDone;
 
-    // Visual: checkbox pop every click
-    addTempClass(el, "pop", 230);
+    // pop every click
+    addTempClass(taskEl, "pop", 230);
 
-    // If completing: pulse + spark burst
     if (nextDone) {
-      addTempClass(el, "pulse", 420);
-      if (evt && evt.clientX != null) burstParticles(evt.clientX, evt.clientY, 12);
+      addTempClass(taskEl, "pulse", 420);
+      burstAroundCheckbox(taskEl, 14);
     }
 
-    setTaskState(id, nextDone);
-    updateProgress();
+    setTaskState(taskEl, nextDone);
+    updateProgress(false);
   }
 
   window.onload = function() {
     restoreFromStorage();
 
-    // If opened with #task1 etc, toggle once, then clear hash so it doesn't re-toggle on refresh
+    // If opened with #taskX, toggle once (supports your stream deck flow)
     if (window.location.hash) {
       const id = window.location.hash.substring(1);
-      if (TASK_IDS.includes(id)) {
-        // fake event center-ish if no click event exists
-        const panel = document.getElementById("panel");
-        if (panel) {
-          const r = panel.getBoundingClientRect();
-          burstParticles(r.left + r.width*0.35, r.top + r.height*0.45, 10);
-        }
-        toggleTask(id, null);
-      }
+      const el = document.getElementById(id);
+      if (el && el.classList.contains("task")) toggleTask(el);
       history.replaceState(null, "", window.location.pathname + window.location.search);
     }
   };
